# academic-ref-inserter

./: .clinerules  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  SKILL.md  check_format.py  fix_docx.py  hybrid_model_architecture.pptx  pyproject.toml  公式MathType录入清单.txt  投稿说明.txt  论文_LaTeX源文件.tex  论文_面向多尺度时序预测的时域门控混合模型_终版.docx  论文_面向多尺度时序预测的时域门控混合模型_终版_公式图片恢复.docx  论文_面向多尺度时序预测的时域门控混合模型_终版_完全修复.docx
.continue/: config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.trae/skills/academic-formula-inserter/: SKILL.md
.trae/skills/academic-formula-inserter/scripts/: build_docx_raw.py  build_ole_docx.py  check_xml.py  check_xml2.py  convert_omml_to_mathtype.py  convert_omml_to_mathtype.vbs  convert_to_mathtype.py  create_demo.py  formula_demo.docx  formula_demo_v2.docx  formula_demo_v3.docx  formula_inserter.py  formula_numbering.py  latex_omml_converter.py  make_simple_test.py  mathtype_integration.py  run_tests.py  test_approach1.docx  test_approach2.docx  test_approach3.docx  test_approach4.docx  test_exported.tex  test_formula_inserted.docx  test_formula_inserter.py  test_numbered.docx  test_output.docx
.trae/skills/academic-ref-inserter/: .cursorrules  .editorconfig  .windsurfrules  AGENTS.md  AMAZON_Q.md  CONVENTIONS.md  GEMINI.md  README.md  SKILL.md  opencode.json
.trae/skills/academic-ref-inserter/examples/: sample_gbt7714.py
.trae/skills/academic-ref-inserter/scripts/: __init__.py  insert_refs.py
.trae/skills/reference-manager/: SKILL.md
.trae/skills/word-docx/: SKILL.md
.trae/skills/word-formula/: SKILL.md
scripts/: insert_refs.py
scripts/formats/: __init__.py  apa7.py  chicago.py  gbt7714.py  mla.py
scripts/utils/: docx_utils.py  doi_lookup.py  validator.py
tests/: test_formats.py  test_new_formats.py  test_validator.py
(+11 files in other folders)
